--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "bootstrap": "^5.1.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
-    "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -46,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-calendar": "^3.5.1",
     "@types/react-datepicker": "^4.4.1",
     "@types/react-router-dom": "^5.3.3"
   }
