--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-use-upload": "^1.0.0",
+    "react-use-upload-typescript": "^0.5.16",
     "sweetalert2": "^11.4.14",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
