--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "axios": "^0.27.2",
         "babel-plugin-macros": "^3.1.0",
         "bootstrap": "^5.1.3",
+        "file-saver": "^2.0.5",
+        "jszip": "^3.10.0",
         "node-sass": "^7.0.1",
         "react": "^18.1.0",
         "react-bootstrap": "^2.4.0",
@@ -56,6 +58,7 @@
         ]
     },
     "devDependencies": {
+        "@types/file-saver": "^2.0.5",
         "@types/pdf-viewer-reactjs": "^2.2.2",
         "@types/react-calendar": "^3.5.1",
         "@types/react-datepicker": "^4.4.1",
