--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
         "@fortawesome/free-regular-svg-icons": "^6.1.1",
         "@fortawesome/free-solid-svg-icons": "^6.1.1",
         "@fortawesome/react-fontawesome": "^0.1.18",
+        "@material-ui/core": "^4.12.4",
+        "@material-ui/icons": "^4.11.3",
+        "@mui/styles": "^5.9.0",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
         "@testing-library/user-event": "^13.5.0",
@@ -16,6 +19,7 @@
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.4",
         "axios": "^0.27.2",
+        "babel-loader": "^8.2.5",
         "babel-plugin-macros": "^3.1.0",
         "bootstrap": "^5.1.3",
         "file-saver": "^2.0.5",
@@ -23,12 +27,15 @@
         "node-sass": "^7.0.1",
         "react": "^18.1.0",
         "react-bootstrap": "^2.4.0",
+        "react-data-table-component": "^7.5.2",
         "react-dom": "^18.1.0",
         "react-icons": "^4.4.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
+        "react-table": "^7.8.0",
         "react-use-upload": "^1.0.0",
         "react-use-upload-typescript": "^0.5.16",
+        "styled-components": "^5.3.5",
         "sweetalert2": "^11.4.14",
         "typescript": "^4.6.4",
         "web-vitals": "^2.1.4"
@@ -62,6 +69,7 @@
         "@types/pdf-viewer-reactjs": "^2.2.2",
         "@types/react-calendar": "^3.5.1",
         "@types/react-datepicker": "^4.4.1",
-        "@types/react-router-dom": "^5.3.3"
+        "@types/react-router-dom": "^5.3.3",
+        "@types/react-table": "^7.7.12"
     }
 }
